cmake_minimum_required(VERSION 3.22.1)

project(nautilus-yarpgen)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CATCH_ENABLE_REPRODUCIBLE_BUILD OFF CACHE INTERNAL "Turn off tests")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -fpermissive -fPIC -fno-omit-frame-pointer")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/nautilus)

add_executable(demo foo.cpp)

target_link_libraries(demo PRIVATE nautilus)


add_executable(simple simple.cpp)
target_link_libraries(simple PRIVATE nautilus)

add_executable(test_1 test_1/naut.cpp)
target_link_libraries(test_1 PRIVATE nautilus)
add_executable(test_2 test_2/naut.cpp)
target_link_libraries(test_2 PRIVATE nautilus)
add_executable(test_3 test_3/naut.cpp)
target_link_libraries(test_3 PRIVATE nautilus)
add_executable(test_4 test_4/naut.cpp)
target_link_libraries(test_4 PRIVATE nautilus)
add_executable(test_5 test_5/naut.cpp)
target_link_libraries(test_5 PRIVATE nautilus)
add_executable(test_6 test_6/naut.cpp)
target_link_libraries(test_6 PRIVATE nautilus)
add_executable(test_7 test_7/naut.cpp)
target_link_libraries(test_7 PRIVATE nautilus)
add_executable(test_8 test_8/naut.cpp)
target_link_libraries(test_8 PRIVATE nautilus)
add_executable(test_9 test_9/naut.cpp)
target_link_libraries(test_9 PRIVATE nautilus)
add_executable(test_10 test_10/naut.cpp)
target_link_libraries(test_10 PRIVATE nautilus)
add_executable(test_11 test_11/naut.cpp)
target_link_libraries(test_11 PRIVATE nautilus)
add_executable(test_12 test_12/naut.cpp)
target_link_libraries(test_12 PRIVATE nautilus)
add_executable(test_13 test_13/naut.cpp)
target_link_libraries(test_13 PRIVATE nautilus)
add_executable(test_14 test_14/naut.cpp)
target_link_libraries(test_14 PRIVATE nautilus)
add_executable(test_15 test_15/naut.cpp)
target_link_libraries(test_15 PRIVATE nautilus)
add_executable(test_16 test_16/naut.cpp)
target_link_libraries(test_16 PRIVATE nautilus)
add_executable(test_17 test_17/naut.cpp)
target_link_libraries(test_17 PRIVATE nautilus)
add_executable(test_18 test_18/naut.cpp)
target_link_libraries(test_18 PRIVATE nautilus)
add_executable(test_19 test_19/naut.cpp)
target_link_libraries(test_19 PRIVATE nautilus)
add_executable(test_20 test_20/naut.cpp)
target_link_libraries(test_20 PRIVATE nautilus)
add_executable(test_21 test_21/naut.cpp)
target_link_libraries(test_21 PRIVATE nautilus)
add_executable(test_22 test_22/naut.cpp)
target_link_libraries(test_22 PRIVATE nautilus)
add_executable(test_23 test_23/naut.cpp)
target_link_libraries(test_23 PRIVATE nautilus)
add_executable(test_24 test_24/naut.cpp)
target_link_libraries(test_24 PRIVATE nautilus)
add_executable(test_25 test_25/naut.cpp)
target_link_libraries(test_25 PRIVATE nautilus)
add_executable(test_26 test_26/naut.cpp)
target_link_libraries(test_26 PRIVATE nautilus)
add_executable(test_27 test_27/naut.cpp)
target_link_libraries(test_27 PRIVATE nautilus)
add_executable(test_28 test_28/naut.cpp)
target_link_libraries(test_28 PRIVATE nautilus)
add_executable(test_29 test_29/naut.cpp)
target_link_libraries(test_29 PRIVATE nautilus)
add_executable(test_30 test_30/naut.cpp)
target_link_libraries(test_30 PRIVATE nautilus)
add_executable(test_31 test_31/naut.cpp)
target_link_libraries(test_31 PRIVATE nautilus)
add_executable(test_32 test_32/naut.cpp)
target_link_libraries(test_32 PRIVATE nautilus)
add_executable(test_33 test_33/naut.cpp)
target_link_libraries(test_33 PRIVATE nautilus)
add_executable(test_34 test_34/naut.cpp)
target_link_libraries(test_34 PRIVATE nautilus)
add_executable(test_35 test_35/naut.cpp)
target_link_libraries(test_35 PRIVATE nautilus)
add_executable(test_36 test_36/naut.cpp)
target_link_libraries(test_36 PRIVATE nautilus)
add_executable(test_37 test_37/naut.cpp)
target_link_libraries(test_37 PRIVATE nautilus)
add_executable(test_38 test_38/naut.cpp)
target_link_libraries(test_38 PRIVATE nautilus)
add_executable(test_39 test_39/naut.cpp)
target_link_libraries(test_39 PRIVATE nautilus)
add_executable(test_40 test_40/naut.cpp)
target_link_libraries(test_40 PRIVATE nautilus)
add_executable(test_41 test_41/naut.cpp)
target_link_libraries(test_41 PRIVATE nautilus)
add_executable(test_42 test_42/naut.cpp)
target_link_libraries(test_42 PRIVATE nautilus)
add_executable(test_43 test_43/naut.cpp)
target_link_libraries(test_43 PRIVATE nautilus)
add_executable(test_44 test_44/naut.cpp)
target_link_libraries(test_44 PRIVATE nautilus)
add_executable(test_45 test_45/naut.cpp)
target_link_libraries(test_45 PRIVATE nautilus)
add_executable(test_46 test_46/naut.cpp)
target_link_libraries(test_46 PRIVATE nautilus)
add_executable(test_47 test_47/naut.cpp)
target_link_libraries(test_47 PRIVATE nautilus)
add_executable(test_48 test_48/naut.cpp)
target_link_libraries(test_48 PRIVATE nautilus)
add_executable(test_49 test_49/naut.cpp)
target_link_libraries(test_49 PRIVATE nautilus)
add_executable(test_50 test_50/naut.cpp)
target_link_libraries(test_50 PRIVATE nautilus)
