cmake_minimum_required(VERSION 3.22.1)

project(nautilus-yarpgen)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CATCH_ENABLE_REPRODUCIBLE_BUILD OFF CACHE INTERNAL "Turn off tests")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -fpermissive -fPIC -fno-omit-frame-pointer")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/nautilus)

add_executable(demo foo.cpp)

target_link_libraries(demo PRIVATE nautilus)


add_executable(simple simple.cpp)
target_link_libraries(simple PRIVATE nautilus)

add_executable(test_6 test_6/naut.cpp)
target_link_libraries(test_6 PRIVATE nautilus)
add_executable(test_7 test_7/naut.cpp)
target_link_libraries(test_7 PRIVATE nautilus)
add_executable(test_10 test_10/naut.cpp)
target_link_libraries(test_10 PRIVATE nautilus)
add_executable(test_12 test_12/naut.cpp)
target_link_libraries(test_12 PRIVATE nautilus)
add_executable(test_16 test_16/naut.cpp)
target_link_libraries(test_16 PRIVATE nautilus)
add_executable(test_17 test_17/naut.cpp)
target_link_libraries(test_17 PRIVATE nautilus)
add_executable(test_18 test_18/naut.cpp)
target_link_libraries(test_18 PRIVATE nautilus)
add_executable(test_19 test_19/naut.cpp)
target_link_libraries(test_19 PRIVATE nautilus)
add_executable(test_23 test_23/naut.cpp)
target_link_libraries(test_23 PRIVATE nautilus)
add_executable(test_25 test_25/naut.cpp)
target_link_libraries(test_25 PRIVATE nautilus)
add_executable(test_27 test_27/naut.cpp)
target_link_libraries(test_27 PRIVATE nautilus)
add_executable(test_30 test_30/naut.cpp)
target_link_libraries(test_30 PRIVATE nautilus)
add_executable(test_33 test_33/naut.cpp)
target_link_libraries(test_33 PRIVATE nautilus)
add_executable(test_36 test_36/naut.cpp)
target_link_libraries(test_36 PRIVATE nautilus)
add_executable(test_37 test_37/naut.cpp)
target_link_libraries(test_37 PRIVATE nautilus)
add_executable(test_42 test_42/naut.cpp)
target_link_libraries(test_42 PRIVATE nautilus)
add_executable(test_44 test_44/naut.cpp)
target_link_libraries(test_44 PRIVATE nautilus)
add_executable(test_48 test_48/naut.cpp)
target_link_libraries(test_48 PRIVATE nautilus)
